tests/e2e/list_index_values4.error
Error: syntax error in story at line 1

1|    a = [1, 2, 3]["f"]
      ^^^^^^^^^^^^^^^^^^

E0104: `List[int]` can't be indexed with `f` of type `string`
